Refactorings...
- remove 'merge';
- rewrite of 'write'.